--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ body {
     margin-top: 20px;
 }
 
+/* MENU NAV LETRAS */
+a {
+  color: white !important;
+}
+
+a:hover {
+  color: white !important;
+}
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {
