--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
-
-@font-face{ 
-    font-family: 'Roboto', sans-serif;
-    src: url("https://fonts.googleapis.com/css?family=Roboto");
-}
 * {
     box-sizing: border-box;
 }
 
 /* Add a gray background color with some padding */
 body {
-    font-family: 'Roboto';
+    font-family: 'Roboto', regular;
     color: white;
     padding: 20px;
     background: #040639;
 }
+h1, h3, h4, h5, h6, h7, p {
+    font-family: "Roboto";
+    font-size: 16pt;
+}
+h2 {
+    font-size: 18pt;
+    font-family: "Roboto";
+}
+
 /* Header/Blog Title */
 .header {
     padding: 30px;
